--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ color: white;
 /* banner section  */
 .banner-container{
     max-width: 100%;
-    height: 700px;
+    min-height: 700px;
     position: relative;
     overflow: hidden;
 }
