--- a/responsiveSmallDevice.css
+++ b/responsiveSmallDevice.css
@@ -1,6 +1,44 @@
 /* Small device: up to 576 px */
 @media screen and (max-width:576px) {
-    .navbar,.btn-container{
-        display: none;
+    .navbar,
+    .btn-container {
+        display: none !important;
     }
+      .menubar {
+        display: block;
+    }
+    header{
+        padding: 16px 20px;
+        height: 60px;
+    }
+   .circle-img{
+    position: absolute;
+    top: 5%;
+    left:36%;
+}
+.circle-img img{
+    width: 150px;
+    height: 150px;
+}
+.micro-img{
+    position: absolute;
+    top: 9%;
+    left:44%;
+}
+.micro-img img{
+    width: 60px;
+    height: 80px;
+} 
+.bg-img{
+    height: 350px;
+}
+.banner-des{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 28%;
+    left:5%;
+}
+
 }
