--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ nav ul li{
 background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1)));
 color: white;
 }
+.menubar{
+    color: white;
+    display: none;
+}
 
 /* banner section  */
 .banner-container{
