--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ a{
     color: white;
 }
 h1{
-    font-size: 40px;
-  
+    font-size: 40px; 
     color:white;
 }
 /* header section  */
@@ -54,6 +53,7 @@ color: white;
     min-height: 700px;
     position: relative;
     overflow: hidden;
+    background-color: #1A0B2E;
 }
 .bg-img img{
     width: 100%;
@@ -104,12 +104,12 @@ color: white;
 /* about section  */
 #about-container{
     max-width: 100%;
-    min-height: 600px;
     display: flex;
     justify-content: start;
     align-items: center;
     flex-direction: column;
 }
+
 .about-des{
     width: 70%;
     height: 230px;
@@ -137,7 +137,7 @@ color: white;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 100px 200px;
+    padding: 100px 0;
 }
 .cards > h1{
     color: #00FF88;
@@ -148,18 +148,104 @@ color: white;
 }
 /* why choose us  */
 .choose-container{
-    border: 1px solid gold;
+    background-color: #230E3D;
     max-width: 100%;
-    min-height: 600px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
-    gap: 40px;
+    margin-top: 30px;
 }
+#grid-title{
+    padding-top: 40px;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.box1{ 
+    grid-area: box1; 
+}
+.box2{ 
+    grid-area: box2; 
+}
+.box3{ 
+    grid-area: box3; 
+}
+.box4{ 
+    grid-area: box4; 
+}
+.box5{ 
+    grid-area: box5; 
+}
+
 .grid-container{
-    border: 1px solid greenyellow;
+    background-color: #230E3D;
+    max-width: 1200px;
+    margin: 40px auto 10px auto;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,200px);
+    grid-template-rows: repeat(3, 220px);
+    gap: 24px;
+    grid-template-areas:"box1 box2 box2"
+                        "box1 box3 box3"
+                        "box4 box4 box5";
+}
+.grid-container > div{
+    padding: 40px;
+    border-radius: 40px;
+    background: rgba(53, 17, 101, 0.4);
+}
+.box p{
+    padding-top: 16px;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgb(209, 199, 199);
+}
+.box h3{
+    font-size: 24px;
+    color: white;
+    padding-top: 5px;
+}
+/* episodes and host  */
+.epi-host-container .title{
+    text-align: center;
+     margin-bottom: 40px;
+     padding-top: 40px;
+}
+.epi-host-container{
+    border: 1px solid greenyellow;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.epi-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.epi-host-container .card-container{
+    max-width: 1200px;
+    display: flex;
+    gap: 30px;
+    justify-content: flex-start;
+}
+.card-container .cards{
+    flex: 1;
+    border-radius: 20px;
+    height: 400px;
+    width: 100%;
+    border: 1px solid gold;
+}
+.cards video{
+    max-width: 100%;
+    height: auto;
+}
+.cards p{
+    padding: 10px;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgb(209, 199, 199);
+}
+.cards h3{
+    font-size: 24px;
+    color: white;
+    padding: 10px;
 }
