--- a/style.css
+++ b/style.css
@@ -50,15 +50,18 @@ color: white;
 /* banner section  */
 .banner-container{
     max-width: 100%;
-    min-height: 700px;
+    min-height: 600px;
     position: relative;
     overflow: hidden;
     background-color: #1A0B2E;
+    padding-bottom: 10px;
+   
 }
 .bg-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 .circle-img{
     position: absolute;
@@ -99,7 +102,6 @@ color: white;
     border-radius: 10000px;
     color: #00FF88;
     background-color: transparent;
-    border: 1px solid #00FF88;
 }
 /* about section  */
 #about-container{
@@ -117,7 +119,7 @@ color: white;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 10px;
     padding: 50px 20px 0 20px;
 }
 .peragraph{
