--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@
     box-sizing: border-box;
     font-family: "Inter",sans-serif;
 }
-html {
-  zoom: 100%;
-}
 body{
     overflow-x: hidden;
     background-color: #1A0B2E;
@@ -67,10 +64,19 @@ color: white;
     
 }
 .circle-img{
-    position: absolute;
+     position: absolute;
     top: 15%;
-    left: 39%;
+    left: 50%;
+    transform: translateX(-50%);
 }
+
+.micro-img{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .circle-img img{
     width: 310px;
     height: 310px;
