--- a/style.css
+++ b/style.css
@@ -280,10 +280,10 @@ color: white;
    
 }
 .host-details p{
-    font-size: 12px;
+    font-size: 16px;
     line-height: 24px;
     color: rgb(209, 199, 199);
-    padding: 10px;
+    padding: 10px 0;
 }
 .host-container .logo{
     padding: 20px;
@@ -302,6 +302,7 @@ color: white;
     align-items: center;
     gap: 20px;
 }
+
 
 /* footer  */
 .footer{
